# cpp_snippets

./: .gitignore
run_executable_with_cmake/: README.md
run_executable_with_cmake/DependentPackage/: CMakeLists.txt
run_executable_with_cmake/OriginalPackage/: CMakeLists.txt  OriginalPackageConfig.cmake.in  OriginalPackageMacros.cmake  main.cpp
